// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test the navbar container and its components |  test the guide component and its functionalities |  renders and matches its snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="dimmable dimmed"
  >
    <div />
    <div
      class="ui page modals dimmer transition visible active"
      style="display: flex;"
    >
      <div
        class="ui modal transition visible active"
      >
        <div
          class="header"
        >
          Before you proceed
        </div>
        <div
          class="content"
        >
          <div
            class="markdown rules"
          />
        </div>
        <div
          class="actions"
        >
          <button
            class="ui icon positive right labeled button"
          >
            <i
              aria-hidden="true"
              class="checkmark icon"
            />
            Okay!
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test the navbar container and its components |  test the navbar component has the same content as guide modal 1`] = `""`;

exports[`test the navbar container and its components |  test the navbar component renders and matches its snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <div
        class="ui inverted segment"
      >
        <div
          class="ui inverted pointing secondary menu"
        >
          <div
            class="active item"
          >
            Home
          </div>
          <div
            class="item"
          >
            <a
              href="https://t.me/AdityaMitra"
              rel="noopener noreferrer"
              target="_blank"
            >
              Report a Bug
            </a>
          </div>
          <div
            class="right item"
          >
            <button
              class="ui olive inverted button"
              id="guide-modal"
              style="margin-right: 2rem;"
            >
              Show Guide
            </button>
            <div
              class="ui checked fitted toggle checkbox"
            >
              <input
                checked=""
                class="hidden"
                readonly=""
                tabindex="0"
                type="checkbox"
                value=""
              />
              <label />
            </div>
            <span
              style="margin-left: 1rem;"
            >
              <div
                class="ui violet horizontal label"
              >
                Dark Mode
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui inverted segment"
    >
      <div
        class="ui inverted pointing secondary menu"
      >
        <div
          class="active item"
        >
          Home
        </div>
        <div
          class="item"
        >
          <a
            href="https://t.me/AdityaMitra"
            rel="noopener noreferrer"
            target="_blank"
          >
            Report a Bug
          </a>
        </div>
        <div
          class="right item"
        >
          <button
            class="ui olive inverted button"
            id="guide-modal"
            style="margin-right: 2rem;"
          >
            Show Guide
          </button>
          <div
            class="ui checked fitted toggle checkbox"
          >
            <input
              checked=""
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
          <span
            style="margin-left: 1rem;"
          >
            <div
              class="ui violet horizontal label"
            >
              Dark Mode
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
